-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 21.0.5, 24.0.1
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8366219 | 25.0.2 | Aleksey Shipilev | P3 | Resolved | Fixed | b01 |
| JDK-8366234 | 21.0.9 | Aleksey Shipilev | P3 | Resolved | Fixed | b06 |
OP Post: https://github.com/adoptium/adoptium-support/issues/1185
From OP:
Tested on 21.0.4 (works), 21.0.5 (crashes), 21.0.7 (crashes) and 24.0.1 (crashes)
```
#10 [6/6] RUN java -version && java -Xshare:dump -Xlog:cds*=debug -XX:SharedClassListFile=classes.list -XX:SharedArchiveFile=classes.jsa --class-path territory-bro.jar && rm classes.list
#10 0.311 openjdk version "21.0.7" 2025-04-15 LTS
#10 0.312 OpenJDK Runtime Environment Temurin-21.0.7+6 (build 21.0.7+6-LTS)
#10 0.312 OpenJDK 64-Bit Server VM Temurin-21.0.7+6 (build 21.0.7+6-LTS, mixed mode, sharing)
#10 0.442 [0.041s][info][cds] Core region alignment: 4096
#10 0.452 [0.053s][debug][cds] Expanding symbol spaces by 1048576 bytes [total 1048576 bytes ending at 0x7fff08100000]
#10 0.525 [0.125s][debug][cds] JVM_GetRandomSeedForDumping() = 787270692
#10 0.538 [0.139s][debug][cds] Expanding symbol spaces by 1048576 bytes [total 2097152 bytes ending at 0x7fff08200000]
#10 0.540 [0.141s][info ][cds] JVM_StartThread() ignored: java.lang.ref.Reference$ReferenceHandler
#10 0.540 [0.141s][info ][cds] JVM_StartThread() ignored: java.lang.ref.Finalizer$FinalizerThread
#10 0.563 [0.164s][info ][cds] Loading classes to share ...
#10 0.563 [0.164s][info ][cds] Parsing classes.list
#10 0.574 [0.175s][warning][cds] java.lang.ClassNotFoundException: sun.nio.fs.BsdFileSystemProvider
#10 0.574 [0.175s][warning][cds] Preload Warning: Cannot find sun/nio/fs/BsdFileSystemProvider
#10 0.574 [0.175s][warning][cds] java.lang.ClassNotFoundException: sun.nio.fs.MacOSXFileSystemProvider
#10 0.574 [0.175s][warning][cds] Preload Warning: Cannot find sun/nio/fs/MacOSXFileSystemProvider
#10 0.574 [0.175s][warning][cds] java.lang.ClassNotFoundException: sun.nio.fs.BsdFileSystem
#10 0.574 [0.175s][warning][cds] Preload Warning: Cannot find sun/nio/fs/BsdFileSystem
#10 0.574 [0.175s][warning][cds] java.lang.ClassNotFoundException: sun.nio.fs.MacOSXFileSystem
#10 0.574 [0.175s][warning][cds] Preload Warning: Cannot find sun/nio/fs/MacOSXFileSystem
#10 0.576 [0.177s][warning][cds] java.lang.ClassNotFoundException: sun.nio.fs.BsdFileAttributeViews
#10 0.576 [0.177s][warning][cds] Preload Warning: Cannot find sun/nio/fs/BsdFileAttributeViews
#10 0.576 [0.177s][warning][cds] java.lang.ClassNotFoundException: sun.nio.fs.BsdFileAttributeViews$Basic
#10 0.576 [0.177s][warning][cds] Preload Warning: Cannot find sun/nio/fs/BsdFileAttributeViews$Basic
#10 0.584 [0.185s][info ][cds] JVM_StartThread() ignored: jdk.internal.misc.InnocuousThread
#10 0.731 [0.332s][debug ][cds] Expanding symbol spaces by 1048576 bytes [total 3145728 bytes ending at 0x7fff08300000]
#10 0.803 [0.404s][debug ][cds] Expanding symbol spaces by 1048576 bytes [total 4194304 bytes ending at 0x7fff08400000]
#10 1.234 [0.835s][debug ][cds] Expanding symbol spaces by 1048576 bytes [total 5242880 bytes ending at 0x7fff08500000]
#10 1.248 #
#10 1.248 # A fatal error has been detected by the Java Runtime Environment:
#10 1.248 #
#10 1.248 # SIGSEGV (0xb) at pc=0x00007ffffe629581, pid=24, tid=25
#10 1.248 #
#10 1.248 # JRE version: OpenJDK Runtime Environment Temurin-21.0.7+6 (21.0.7+6) (build 21.0.7+6-LTS)
#10 1.248 # Java VM: OpenJDK 64-Bit Server VM Temurin-21.0.7+6 (21.0.7+6-LTS, interpreted mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
#10 1.248 # Problematic frame:
#10 1.248 # V [libjvm.so+0x61c581] ClassListParser::resolve_indy_impl(Symbol*, JavaThread*)+0xf1
#10 1.250 #
#10 1.250 # No core dump will be written. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
#10 1.250 #
#10 1.252 # An error report file with more information is saved as:
#10 1.252 # /app/hs_err_pid24.log
#10 1.261 #
#10 1.261 # If you would like to submit a bug report, please visit:
#10 1.261 # https://github.com/adoptium/adoptium-support/issues
#10 1.261 #
#10 1.263 Aborted
#10 ERROR: process "/bin/sh -c java -version && java -Xshare:dump -Xlog:cds*=debug -XX:SharedClassListFile=classes.list -XX:SharedArchiveFile=classes.jsa --class-path territory-bro.jar && rm classes.list" did not complete successfully: exit code: 134
```
- backported by
-
JDK-8366219 JVM crash (SIGSEGV at ClassListParser::resolve_indy_impl) during -Xshare:dump starting from 21.0.5
-
- Resolved
-
-
JDK-8366234 JVM crash (SIGSEGV at ClassListParser::resolve_indy_impl) during -Xshare:dump starting from 21.0.5
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk21u-dev/c9fb99c0
-
Commit(master)
openjdk/jdk25u/d46096a4
-
Commit(master)
openjdk/jdk/506625b7
-
Review(master)
openjdk/jdk21u-dev/2123
-
Review(master)
openjdk/jdk25u/127
-
Review(master)
openjdk/jdk/26770