8356324: JVM crash (SIGSEGV at ClassListParser::resolve_indy_impl) during -Xshare:dump starting from 21.0.5

Reviewed-by: phh
Backport-of: 506625b768c940a3f4fc2efce485d9207ca61cfe